# QtMenuBar

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  resources.qrc
Qml/: Footer.qml  InfotainmentModel.qml  Main.qml  MenuButton.qml  Navigation.qml
resources/: resources.qrc
src/: MainWindow.cpp
